Excessive WARN messages in console when opening older files #66369

Closed
opened 2019-07-03 12:27:55 +02:00 by Sebastian Koenig · 5 comments

System Information
Operating system: Linux-4.4.0-151-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-02 14:04, hash: 57c26453f8

Short description of error
When opening or linking/appending older blendfiles the terminal is flooded with WARN messages. When linking in many libraries the terminal looks like in the image below.
WARN.jpeg

Exact steps for others to reproduce the error
If you open this file you should see 1 WARN message in the console. Once the file was saved with Blender 2.80, the warning dissappears.

WARN_file.blend

**System Information** Operating system: Linux-4.4.0-151-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-02 14:04, hash: `57c26453f8` **Short description of error** When opening or linking/appending older blendfiles the terminal is flooded with WARN messages. When linking in many libraries the terminal looks like in the image below. ![WARN.jpeg](https://archive.blender.org/developer/F7563591/WARN.jpeg) **Exact steps for others to reproduce the error** If you open this file you should see 1 WARN message in the console. Once the file was saved with Blender 2.80, the warning dissappears. [WARN_file.blend](https://archive.blender.org/developer/F7563593/WARN_file.blend)
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k
Member

Added subscribers: @mont29, @lichtwerk

Added subscribers: @mont29, @lichtwerk
Bastien Montagne was assigned by Philipp Oeser 2019-07-03 13:38:45 +02:00
Member

This was introduced in 13978f7ff6 (see #62318 also)

In your case, this seems to be the UVMap @mont29: are these (UVs) not written through write_customdata? (need some more reading here...)
I assume these are written/read somehow differently, but would kindly ask @mont29 to share his wisdom...
(this might not be a bug after all)

This was introduced in 13978f7ff6 (see #62318 also) In your case, this seems to be the `UVMap` @mont29: are these (UVs) not written through `write_customdata`? (need some more reading here...) I assume these are written/read somehow differently, but would kindly ask @mont29 to share his wisdom... (this might not be a bug after all)

This issue was referenced by c441448359

This issue was referenced by c44144835974ad877212973a4ae45c03b7c66f80

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#66369
No description provided.